--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -25,3 +25,18 @@ ul.iconscity {
 button {
     margin: 0 5px 0 0;
 }
+.itinerary {
+    background-image: url('https://images.unsplash.com/photo-1539635278303-d4002c07eae3?auto=format&fit=crop&w=1170&q=80');
+    height: 150px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    display: inline-flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0;
+}
+.separator {
+    height: 50px;
+}
