--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
+:root {
+  --primary-dark: #04151F;
+  --secondary-dark: #357AB4;
+  --primary-light: #C49D48;
+  --secondary-light: #EFD6AC;
 }
 
-.container-fluid {
+* {
+  box-sizing: border-box;
+  margin: 0;
   padding: 0;
 }
+body {
+  font-family: 'Raleway', sans-serif;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 3.5rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px var(--secondary-light);
+
+}
+h3 {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px var(--secondary-light);
+
+
+}
+
+.container {
+  max-width: 1240px;
+}
+
+button {
+  border: 1px solid var(--primary-dark);
+  background-color: #ffffff;
+  padding: 1.5vh 1.8vh;
+  border-radius: 33px;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+  
+
+}
+
+
+
+@media screen and (max-width: 940px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
 }
