Form, Experiences and Categories componentes created

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,12 @@ button {
 
 }
 
-
+.form-label, .form-check-label {
+  margin-bottom: 0.1rem;
+  margin-top: 0.6rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
 
 @media screen and (max-width: 940px) {
   h1 {
