--- a/src/components/Experiences/Experiences.module.css
+++ b/src/components/Experiences/Experiences.module.css
@@ -1,9 +1,9 @@
 
-ul.iconscity {
+ul.iconsexperience {
     padding-left: 0;
 }
 
-.iconscity {
+.iconsexperience {
     list-style: none;
     display: inline-flex;
     justify-content: space-between;
@@ -11,12 +11,12 @@ ul.iconscity {
     font-weight: bold;
 
 }
-.iconscity li i {
+.iconsexperience li i {
     font-size: 1.2rem;
     font-weight: bold;
     padding: 0 0 0 10px;
 }
-.scorecity {
+.scoreexperience {
     list-style: none;
     display: inline-flex;
     justify-content: space-between;
@@ -25,12 +25,17 @@ ul.iconscity {
 button {
     margin: 0 5px 0 0;
 }
-.itinerary {
-    background-image: url('https://images.unsplash.com/photo-1539635278303-d4002c07eae3?auto=format&fit=crop&w=1170&q=80');
-    height: 250px;
+.experiencesbuttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+.moreinfo {
+    background-image: url('https://images.unsplash.com/photo-1536257104079-aa99c6460a5a?auto=format&fit=crop&w=1170&q=80');
+    height: 150px;
     width: 100%;
     background-size: cover;
-    background-position: center;
+    background-position: 0 640px;
     display: inline-flex;
     align-content: center;
     justify-content: center;
@@ -39,4 +44,18 @@ button {
 }
 .separator {
     height: 50px;
+}
+
+.categoryicons {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    cursor: pointer;
+}
+.categoryicons li:hover {
+    color: #C49D48;
+}
+
+.categoryicons li i {
+    font-size: 3rem;
 }
