Form, Experiences and Categories componentes created v3

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,6 +1,6 @@
 .containerHome {
     height: 100vh;
-    background-image: url('../../../assets/buenos\ aires.jpg');
+    background-image: url('../../assets/buenos\ aires.jpg');
     background-size: cover;
     background-position: center;
 }
